fix(app): dashlines and pixblock to put fat bee in

--- a/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
+++ b/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
@@ -83,7 +83,6 @@
           />
         {{/each}}
       </div>
-      <div class="skill-review-result__dash-line"></div>
     {{/if}}
 
     {{#if @model.displayImprovementButton}}
@@ -93,9 +92,7 @@
     {{/if}}
   {{/if}}
 
-  <div class="skill-review-result__dash-line"></div>
-
-  <main>
+  <main class="skill-review-result__content">
     <div class="skill-review-result__table-header">
       <h2 class="skill-review-result__subtitle">
         {{t 'pages.skill-review.details.title'}}
