--- a/mon-pix/app/templates/campaigns/campaign-landing-page.hbs
+++ b/mon-pix/app/templates/campaigns/campaign-landing-page.hbs
@@ -52,9 +52,7 @@
             </a>
           </p>
 
-          <hr class="campaign-landing-page__dash-line">
-
-          <div class="campaign-landing-page__details__measure__container">
+          <div class="campaign-landing-page__details__measure__container campaign-landing-page__details__measure__container--dashline">
             <img src="{{this.rootURL}}/images/landing-page/icon-conseil.svg" role="none" alt="">
             <div class="campaign-landing-page__details__article-side">
               <p class="campaign-landing-page__details__text article-title ">
@@ -66,9 +64,8 @@
             </div>
 
           </div>
-          <hr class="campaign-landing-page__dash-line">
 
-          <div class="campaign-landing-page__details__measure__container">
+          <div class="campaign-landing-page__details__measure__container campaign-landing-page__details__measure__container--dashline">
             <img src="{{this.rootURL}}/images/landing-page/icon-certif.svg" role="none" alt="">
             <div class="campaign-landing-page__details__article-side">
               <p class="campaign-landing-page__details__text article-title ">
