--- a/mon-pix/app/styles/pages/_send-profile.scss
+++ b/mon-pix/app/styles/pages/_send-profile.scss
@@ -1,5 +1,10 @@
 .send-profile-header {
-  padding: 30px;
+  padding: 30px 10px;
+  margin-top: -160px;
+
+  @include device-is('tablet') {
+    padding: 32px 24px;
+  }
 
   &__announcement {
     display: flex;
