--- a/mon-pix/app/styles/components/_user-account-update-email.scss
+++ b/mon-pix/app/styles/components/_user-account-update-email.scss
@@ -10,6 +10,10 @@
     color: $grey-90;
     font-family: $font-open-sans;
     line-height: 1.75rem;
+
+    &:nth-child(3) {
+      padding-top: 25px;
+    }
   }
 
   &__form {
