--- a/mon-pix/app/styles/components/dashboard/_content.scss
+++ b/mon-pix/app/styles/components/dashboard/_content.scss
@@ -6,6 +6,7 @@
 .dashboard-content {
   display: grid;
   grid-template-columns: 100%;
+  grid-template-rows: auto;
   padding: 40px 20px;
   grid-template-areas:
     'banner'
@@ -42,6 +43,7 @@
 
   @include device-is('tablet') {
     grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
     grid-template-areas:
       'banner banner banner banner banner banner'
       'score score score certif certif certif'
@@ -73,11 +75,12 @@
 
   @include device-is('large-screen') {
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
     grid-template-areas:
       'main main main score'
       'main main main certif'
-      'main main main empty'
-      'main main main empty';
+      'main main main certif'
+      'main main main certif';
     padding: 0 20px;
 
     &__banner {
