--- a/admin/app/styles/authenticated/certification-center/index.scss
+++ b/admin/app/styles/authenticated/certification-center/index.scss
@@ -12,4 +12,23 @@
       margin-bottom: 20px;
     }
   }
+
+  .certification-center {
+
+    &__section {
+      display: flex;
+      justify-content: center;
+
+      input {
+        width: 310px;
+      }
+    }
+
+  }
+
+  .error {
+    padding-top: 5px;
+    color: $error;
+    font-size: .85rem;
+  }
 }
