--- a/orga/app/components/previous-page-button.hbs
+++ b/orga/app/components/previous-page-button.hbs
@@ -1,12 +1,13 @@
 <div class="previous-page-button">
-  <LinkTo
-    @route={{@route}}
-    @model={{@routeId}}
-    class="icon-button previous-page-button__return-button"
+  <PixIconButton
+    @icon="arrow-left"
     aria-label={{@ariaLabel}}
-  >
-    <FaIcon @icon='arrow-left'></FaIcon>
-  </LinkTo>
+    class="previous-page-button__return-button"
+    @triggerAction={{this.goToPage}}
+    @withBackground={{false}}
+    @size="small"
+    @color="dark-grey"
+  />
   <h1 class="back-title">
     {{yield}}
   </h1>
