--- a/orga/app/styles/globals/panels.scss
+++ b/orga/app/styles/globals/panels.scss
@@ -73,22 +73,12 @@
     align-content: center;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1px 28px 1px 24px;
-    border-right: 1px solid $grey-20;
-
-    &--horizontal {
-      flex-direction: row;
-      align-items: center;
-    }
+    padding: 0 16px;
+    border-left: 1px solid $grey-20;
   }
 
   &__content:first-child {
-    padding-left: 0;
-  }
-
-  &__content:last-child {
-    border-right: none;
-    padding-right: 0;
+    border-left: none;
   }
 }
 
@@ -96,9 +86,7 @@
   &__badges {
     display: flex;
     align-items: center;
-    height: 32px;
-    padding: 0 16px;
-    border-right: 1px solid $grey-20;
+    flex-direction: row;
 
     img {
       height: 40px;
@@ -117,15 +105,12 @@
   }
 
   &__progress-bar {
-    padding: 16px 16px 0 16px;
+    padding-top: 8px;
   }
 
   &__stages {
     display: flex;
     align-items: center;
-    height: 32px;
-    padding: 0 16px;
-    border-left: 1px solid $grey-20;
 
     .pix-stars svg {
       width: 26px;
@@ -134,7 +119,9 @@
   }
 
   &__mastery-percentage {
-    padding-right: 16px;
+    margin-bottom: 8px;
+    padding-left: 0;
+    border-left: none;
   }
 }
 
