--- a/orga/app/components/routes/authenticated/campaign/details/tab.hbs
+++ b/orga/app/components/routes/authenticated/campaign/details/tab.hbs
@@ -26,7 +26,7 @@
               @clipboardText={{this.campaignsRootUrl}}
               @success={{this.clipboardSuccess}}
               {{on 'mouseLeave' this.clipboardOut}}
-              @classNames="icon-button campaign-details-content__clipboard-button">
+              @classNames="pix-icon-button pix-icon-button--small pix-icon-button--dark-grey campaign-details-content__clipboard-button">
               <FaIcon @icon='copy' @prefix='far'/>
             </CopyButton>
           </PixTooltip>
