Use Alt attributes to give information about link to homepage

--- a/mon-pix/app/templates/components/signup-form.hbs
+++ b/mon-pix/app/templates/components/signup-form.hbs
@@ -1,8 +1,8 @@
 {{!-- template-lint-disable no-implicit-this no-action no-curly-component-invocation --}}
 <main class="sign-form__container">
 
-  <a href={{homeUrl}} class="pix-logo__link" title="{{t 'navigation.homepage'}}">
-    <img class="pix-logo__image" src="{{rootURL}}/images/pix-logo.svg" alt="{{t 'common.pix'}}">
+  <a href={{homeUrl}} class="pix-logo__link">
+    <img class="pix-logo__image" src="{{rootURL}}/images/pix-logo.svg" alt="{{t 'navigation.homepage'}}">
   </a>
 
   <div class="sign-form__header">
