--- a/mon-pix/app/templates/components/password-reset-demand-form.hbs
+++ b/mon-pix/app/templates/components/password-reset-demand-form.hbs
@@ -1,7 +1,7 @@
 <main class="sign-form__container">
 
-  <a href={{this.homeUrl}} class="pix-logo__link" title={{t 'navigation.homepage'}}>
-    <img class="pix-logo__image" src="{{@rootURL}}/images/pix-logo.svg" alt="Pix">
+  <a href={{this.homeUrl}} class="pix-logo__link">
+    <img class="pix-logo__image" src="{{@rootURL}}/images/pix-logo.svg" alt="{{t 'navigation.homepage'}}">
   </a>
 
   <div class="sign-form__header">
