--- a/mon-pix/app/templates/components/pix-logo.hbs
+++ b/mon-pix/app/templates/components/pix-logo.hbs
@@ -1,5 +1,5 @@
 <div class="pix-logo">
-  <LinkTo @route="index" class="pix-logo__link" @title={{t 'navigation.homepage'}}>
-    <img class="pix-logo__image" src="{{this.rootURL}}/images/pix-logo.svg" alt={{t 'common.pix'}}>
+  <LinkTo @route="index" class="pix-logo__link">
+    <img class="pix-logo__image" src="{{this.rootURL}}/images/pix-logo.svg" alt={{t 'navigation.homepage'}}>
   </LinkTo>
 </div>
