--- a/mon-pix/app/templates/components/update-expired-password-form.hbs
+++ b/mon-pix/app/templates/components/update-expired-password-form.hbs
@@ -1,7 +1,7 @@
 <div class="update-expired-password-form__container">
 
-    <a href={{this.homeUrl}} class="pix-logo__link" title={{t 'navigation.back-to-homepage'}}>
-      <img class="pix-logo__image" src="{{@rootURL}}/images/pix-logo.svg" alt="Pix">
+    <a href={{this.homeUrl}} class="pix-logo__link">
+      <img class="pix-logo__image" src="{{@rootURL}}/images/pix-logo.svg" alt="{{t 'navigation.homepage'}}">
     </a>
 
     <div class="update-expired-password-form__header">
