--- a/mon-pix/app/templates/terms-of-service-pe.hbs
+++ b/mon-pix/app/templates/terms-of-service-pe.hbs
@@ -4,8 +4,8 @@
   <div class="terms-of-service-form">
 
     <div class="terms-of-service-form__logo">
-      <a href={{homeUrl}} title={{t 'navigation.homepage'}}>
-        <img class="pix-logo__image" src="{{rootURL}}/images/pix-logo.svg" alt="Pix">
+      <a href={{homeUrl}}>
+        <img class="pix-logo__image" src="{{rootURL}}/images/pix-logo.svg" alt={{t 'navigation.homepage'}}>
       </a>
     </div>
 
