--- a/certif/app/components/import-candidates.hbs
+++ b/certif/app/components/import-candidates.hbs
@@ -17,8 +17,7 @@
         </div>
       </div>
       <div class="panel-actions__button">
-        <a data-test-id="attendance_sheet_download_button"
-          class="button button--link button--with-icon"
+        <a class="button button--link button--with-icon"
           href="{{@session.urlToDownloadCandidatesImportTemplate}}" target="_blank" rel="noopener noreferrer" download>
           Télécharger (.ods)<FaIcon @icon='file-download' />
         </a>
@@ -41,8 +40,7 @@
         </div>
         <div class="panel-actions__button">
           <FileUpload @name="file-upload" @for="upload-attendance-sheet" @accept=".ods" @multiple={{false}} @onfileadd={{this.importCertificationCandidates}}>
-            <span data-test-id="attendance_sheet_upload_button"
-                  class="button button--with-icon"
+            <span class="button button--with-icon"
                   role="button"
                   tabindex="0">
               Importer (.ods)<FaIcon @icon='cloud-upload-alt' />
