--- a/mon-pix/app/templates/components/result-item.hbs
+++ b/mon-pix/app/templates/components/result-item.hbs
@@ -1,6 +1,7 @@
 <div class="result-item">
   {{#if this.resultItem}}
     <div class="result-item__icon" title="{{this.resultTooltip}}">
+      <span class="sr-only">{{this.resultTooltip}}</span>
       <FaIcon @icon={{this.resultItem.icon}} class={{concat 'result-item__icon--' this.resultItem.color}} />
     </div>
 
