Add displayType to link in NewInformation component

--- a/mon-pix/app/components/dashboard/content.hbs
+++ b/mon-pix/app/components/dashboard/content.hbs
@@ -39,6 +39,7 @@
                         @backgroundColorClass="new-information--yellow-background"
                         @linkText={{t 'pages.dashboard.empty-dashboard.link-to-competences'}}
                         @linkTo="profile"
+                        @linkDisplayType="button"
                         @textColorClass="new-information--black-text"/>
       </div>
     </section>
